# XaocSirck-2nd

./: .gitattributes  .gitignore  Cargo.toml  License.md  README.md  Todo.md  XSRule_Test.xsr  XaocSirck 2nd.slnx
Charwolf/: Charwolf.csproj  DatasetLoader.cs  Entry.cs
DevConsole/: DevConsole.csproj  Entry.cs
LogSystem/: LogSystem.csproj  Logger.cs
Updater/: AppMain.cpp  Base.hpp  Entry.cs  Updater.csproj  Updater.vcxproj  Updater.vcxproj.filters
XaocSirck App/: App.axaml  App.axaml.cs  Program.cs  XaocSirck App.csproj  app.manifest
XaocSirck Cloud/XaocSirck Cloud Service/CacheService/: Cargo.toml
XaocSirck Cloud/XaocSirck Cloud Service/CacheService/src/: auth.rs  cold.rs  control.rs  hot.rs  lib.rs  routes.rs
XaocSirck Cloud/XaocSirck Cloud Service/CommunityService/: Cargo.toml
XaocSirck Cloud/XaocSirck Cloud Service/CommunityService/src/: community.rs  lib.rs  routes.rs
XaocSirck Cloud/XaocSirck Cloud Service/MainService/: Cargo.toml
XaocSirck Cloud/XaocSirck Cloud Service/MainService/src/: auth.rs  main.rs
XaocSirck Cloud/XaocSirck Cloud Service/MainService/src/system/: errors.rs  health.rs  mod.rs  routes.rs  security.rs  stats.rs
XaocSirck Core/: App.cs  Entry.cs  XaocSirck Core.csproj
XaocSirck Export/: EngineExport.cs  XaocSirck Export.csproj  XsExport.h
XaocSirck Inference Service/: Algorithm.cpp  Algorithm.hpp  Base.h  DLLMain.cpp  SessionInference.cpp  SessionInference.hpp  SessionManagement.cpp  SessionManagement.hpp  XaocSirck Inference Service.vcxproj  XaocSirck Inference Service.vcxproj.filters
XaocSirck Online Service/: Api.cpp  Api.hpp  Base.hpp  Communication.cpp  Communication.hpp  XaocSirck Online Service.vcxproj  (+1 more)
(+141 files in other folders)
