[package]
name = "main-service"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../Common" }
cache-service = { path = "../CacheService" }
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.33"
